Homepage title line height reduced

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -78,7 +78,8 @@
 
   .title_expanded {
     display: none;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    line-height: 1;
   }
 
   .pretitle,
