Accordion read more inline with accordion text

--- a/styles/components/_accordion.scss
+++ b/styles/components/_accordion.scss
@@ -51,6 +51,10 @@
     padding-bottom: 1.438rem;
   }
 
+  .accordion__readmore {
+    display: inline;
+  }
+
   .readmore {
     margin-left: 1rem;
   }
