--- a/styles/_typograpy.scss
+++ b/styles/_typograpy.scss
@@ -79,7 +79,7 @@ p {
 
 .text-cta {
   padding-bottom: 2px;
-  font-size: $font-size-sm;
+  font-size: 14px;
   font-weight: $font-weight-bold;
   text-transform: uppercase;
   letter-spacing: 0.15em;
