Typography - All ampersand font family with font weight

--- a/styles/_typograpy.scss
+++ b/styles/_typograpy.scss
@@ -39,6 +39,7 @@ p {
   font-family: $font-family-serif;
   font-weight: $font-weight-normal;
   line-height: $line-height-xs;
+  text-transform: uppercase;
 }
 
 .header-xlarge {
