CAROUSEL - Solved problem of transition

--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -43,11 +43,11 @@
         }
       }
     }
-
+/*
     .first & {
       @include media-breakpoint-up(sm) {
         // Animation version 1
-        margin-left: calc(50% - #{math.div($round-image-size, 2) - 50px});
+        margin-left: calc(20% - #{math.div($round-image-size, 2) - 50px});
 
         // Animation version 2
         //transform: translate(calc(50% - #{math.div($round-image-size, 2) - 50px}), 0);
@@ -62,7 +62,7 @@
       }
       @include media-breakpoint-up(lg) {
         // Animation version 1
-        margin-left: calc(50% - #{math.div($round-image-size-medium, 2) - 50px});
+        margin-left: calc(20% - #{math.div($round-image-size-medium, 2) - 50px});
 
         // Animation version 2
         //transform: translate(calc(50% - #{math.div($round-image-size-medium, 2) - 50px}), 0);
@@ -76,7 +76,7 @@
       }
       @include media-breakpoint-up(xl) {
         // Animation version 1
-        margin-left: calc(50% - #{math.div($round-image-size-big, 2) - 100px});
+        margin-left: calc(20% - #{math.div($round-image-size-big, 2) - 100px});
 
         // Animation version 2
         //transform: translate(calc(50% - #{math.div($round-image-size-big, 2) - 100px}), 0);
@@ -93,7 +93,7 @@
     .last & {
       @include media-breakpoint-up(sm) {
         // Animation version 1
-        margin-left: calc(-50% + #{math.div($round-image-size, 2) - 50px});
+        margin-left: calc(-20% + #{math.div($round-image-size, 2) - 50px});
 
         // Animation version 2
         //transform: translate(calc(-50% + #{math.div($round-image-size, 2) - 50px}), 0);
@@ -108,7 +108,7 @@
       }
       @include media-breakpoint-up(lg) {
         // Animation version 1
-        margin-left: calc(-50% + #{math.div($round-image-size-medium, 2) - 50px});
+        margin-left: calc(-20% + #{math.div($round-image-size-medium, 2) - 50px});
 
         // Animation version 2
         //transform: translate(calc(-50% + #{math.div($round-image-size-medium, 2) - 50px}), 0);
@@ -122,7 +122,7 @@
       }
       @include media-breakpoint-up(xl) {
         // Animation version 1
-        margin-left: calc(-50% + #{math.div($round-image-size-big, 2) - 100px});
+        margin-left: calc(-20% + #{math.div($round-image-size-big, 2) - 100px});
 
         // Animation version 2
         //transform: translate(calc(-50% + #{math.div($round-image-size-big, 2) - 100px}), 0);
@@ -135,7 +135,9 @@
         //margin-left: math.div($round-image-size-big, 2) - 100px;
       }
     }
+    */
   }
+  
 
   .header-inner-content__img {
     .image {
