Home slide: Unfolded title increase line height

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -79,7 +79,7 @@
   .title_expanded {
     display: none;
     margin-bottom: 20px;
-    line-height: 1;
+    line-height: 60px;
   }
 
   .pretitle,
