--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -55,7 +55,6 @@
 
 .embla__container {
   display: flex;
-  position: absolute;
   user-select: none;
   -webkit-touch-callout: none;
   -khtml-user-select: none;
@@ -72,6 +71,10 @@
   position: relative;
   min-width: 100vw;
   z-index: 5;
+}
+
+.embla--carousel-navigation .embla__container{
+  position: absolute;
 }
 
 .embla--carousel-navigation .embla__slide__inner {
