--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -239,7 +239,7 @@ body.is-scrolled {
 .embla--carousel-navigation{
   &.transitioning{
     .embla__button{
-      cursor: not-allowed;
+      //cursor: not-allowed;
     }
   }
 }
