Header: Hide on scroll down, show on scoll up

--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -100,3 +100,9 @@ a {
     background: url("../public/svg/close.svg") no-repeat center center;
   }
 }
+
+.hide-sm {
+  @include media-breakpoint-down(sm) {
+    display: none;
+  }
+}
