--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -39,8 +39,8 @@
   width: 100%;
   &:before{
     //transition: background $scroll-down-transition-duration ease-in-out;
-    transition: opacity 0.8s ease-in-out, 
-                filter 0.3s linear;
+    transition: opacity $main-carousel-transition-duration ease-in-out, 
+                filter $main-carousel-transition-duration/2 linear;
   }
 }
 
