--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -22,8 +22,18 @@ header[role="banner"] {
     background: $color_white;
   }
 
+  > * {
+    flex: 1;
+
+    &:last-child {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+
   .header__logo {
-    display: block;
+    display: flex;
+    justify-content: center;
     margin: 0 15px;
 
     svg {
