Component one column text media wrapped

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -39,3 +39,4 @@
 @import "components/_header-2036";
 @import "components/_video";
 @import "components/_header";
+@import "components/_image-text-one-column";
