Home video transition smoother with margins

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -274,6 +274,7 @@
         opacity math.div($scroll-down-transition-duration, 2) ease-out,
         bottom math.div($scroll-down-transition-duration, 2) math.div($scroll-down-transition-duration, 3) ease-out,
         transform math.div($scroll-down-transition-duration, 2) math.div($scroll-down-transition-duration, 3) ease-out,
+        margin-left math.div($scroll-down-transition-duration, 2) math.div($scroll-down-transition-duration, 2) ease-out,
         margin-bottom math.div($scroll-down-transition-duration, 2) math.div($scroll-down-transition-duration, 2) ease-out;
 
       @media (orientation: portrait) {
