Carousel homepage dont cut title shadow

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -155,7 +155,8 @@
     bottom: 50%;
 
     > span {
-      margin: 0 45px;
+      display: block;
+      padding: 0 23px;
     }
 
     .header-2036__title__3 {
