Header - hide when video full window

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -22,6 +22,10 @@ header[role="banner"] {
     background: $color_white;
   }
 
+  .full_video & {
+    display: none;
+  }
+
   > * {
     flex: 1;
 
