--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -43,9 +43,9 @@
         }
       }
     }
-    
+
   }
-  
+
 
   .header-inner-content__img {
     .image {
@@ -147,7 +147,8 @@
     padding-left: math.div($grid-gutter-width, 2);
     padding-right: math.div($grid-gutter-width, 2);
     padding-top: $round-image-size-small + $default-separation;
-    max-width: map-get($container-max-widths, 'md');
+    //max-width: map-get($container-max-widths, 'md');
+    max-width: 100%;
     transition: all $scroll-down-transition-duration ease-out;
 
     @include media-breakpoint-up(sm) {
@@ -200,7 +201,7 @@
     }
 
     .header-inner-content__text {
-      max-width: map-get($container-max-widths, 'lg');
+      //max-width: map-get($container-max-widths, 'lg');
       padding-top: math.div($round-image-size + $default-separation, 3);
 
       @include media-breakpoint-up(lg) {
