--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -6,7 +6,7 @@
     .header-inner-content__img {
       width: 100vw !important;
       height: 100vh !important;
-      border: 0;
+      //border: 0;
       border-radius:50%;
       margin: 0 !important;
       z-index: 999 !important;
