--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -6,8 +6,8 @@
     .header-inner-content__img {
       width: 100vw !important;
       height: 100vh !important;
-      //border: 0;
-      border-radius:50%;
+      top: auto !important;
+      border-radius: 50%;
       margin: 0 !important;
       z-index: 999 !important;
 
@@ -30,9 +30,10 @@
         height: 100vh;
       }
     }
-    .video-paused{
-      video{
-        opacity: 0.5;
+
+    .video-paused {
+      video {
+        opacity: .5;
         transition: opacity 1s;
       }
     }
