--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -26,21 +26,26 @@
     }
 
     figure {
-      max-height: 50vh;
+      display: table;
+
 
       img {
         height: 100%;
         width: 100%;
         object-fit: contain;
+        max-height: 50vh;
       }
 
       video{
         max-width: 900px;
         width: 100%;
+        max-height: 50vh;
       }
     }
 
     .overlay__text {
+      display: table-caption;
+      caption-side: bottom;
       margin: 20px auto;
       max-width: map-get($container-max-widths, 'md');
       .text-body{
