Header - Logo only visible when scrolling up

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -36,13 +36,16 @@ header[role="banner"] {
   }
 
   .header__logo {
-    display: flex;
+    display: none;
     justify-content: center;
     margin: 0 15px;
 
     svg {
       display: block;
     }
-  }
 
+    .is-scrolled & {
+      display: flex;
+    }
+  }
 }
