--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -89,7 +89,11 @@
     left: 50%;
     transform: translate(-50%, 50%);
     z-index:60;
-
+    opacity:0; 
+    transition: opacity 1s;
+    &.paused{
+      opacity: 1;
+    }
     &:hover {
       background-color: rgba($color-white, .8);
     }
