--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -3,11 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
   padding: 40px 0 100px 0;
   text-align: center;
   //background: url("/public/images/2036-bg.jpg") no-repeat center bottom;
   background-size: cover !important;
+  height: 100%;
 
   .header-inner-content {
     display: flex;
