--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -25,7 +25,7 @@
 
     .content-header__container {
       border-radius: 0%;
-      padding: 0;
+      // padding: 0;
 
       &.wrapper {
         height: 100vh;
