--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -29,6 +29,17 @@
     .no_selected & {
       opacity: .3;
       max-width: $round-image-size-big;
+
+      .header-inner-content__img {
+        left: 60px;
+      }
+    }
+
+    // Ensure the transition of the O geos along with the slide transition speed.
+    .is-transitioning & {
+      .header-inner-content__img {
+        transition: left math.div($main-carousel-transition-duration, 2) ease-in-out;
+      }
     }
 
     .first & {
@@ -78,8 +89,10 @@
 
   .title_expanded {
     display: none;
+    opacity:0;
     margin-bottom: 20px;
     line-height: 60px;
+    transition: opacity math.div($scroll-down-transition-duration, 2) ease;
   }
 
   .pretitle,
@@ -175,46 +188,44 @@
 
 $pre-animation-delay: math.div($scroll-down-transition-duration, 2);
 
+$scroll-down-transition-duration: 1s;
+$curve: cubic-bezier(.63,.72,.79,.98);
+
 .header-2036.content-header__container {
   transition: background $scroll-down-transition-duration ease-in-out;
 
   .header-inner-content__img {
     position: absolute;
-    top: 110px;
-    bottom: auto;
-    left: 50%;
-    transform: translate(-50%, 50%);
+    bottom: calc(100vh - 410px);
     max-width: unset;
     width: 100px;
     height: 100px;
+    transform: none;
     box-sizing: content-box;
     z-index: 10;
     padding: 0;
     margin-bottom: 0;
     will-change: width, height;
     transition:
-      width $scroll-down-transition-duration $pre-animation-delay ease-out,
-      height $scroll-down-transition-duration $pre-animation-delay ease-out,
-      top $scroll-down-transition-duration $pre-animation-delay ease-out,
-      opacity $scroll-down-transition-duration $pre-animation-delay ease-out,
-      transform $scroll-down-transition-duration $pre-animation-delay ease-out,
-      margin-left $scroll-down-transition-duration $pre-animation-delay ease-out,
-      margin-top $scroll-down-transition-duration $pre-animation-delay ease-out;
+      width $scroll-down-transition-duration $pre-animation-delay $curve,
+      height $scroll-down-transition-duration $pre-animation-delay $curve,
+      $scroll-down-transition-duration $pre-animation-delay $curve,
+      bottom $scroll-down-transition-duration $pre-animation-delay $curve,
+      margin-bottom $scroll-down-transition-duration $pre-animation-delay $curve,
+      transform $scroll-down-transition-duration $pre-animation-delay $curve,
+      opacity $scroll-down-transition-duration $pre-animation-delay $curve;
 
     @include media-breakpoint-up(sm) {
-      top: 78px;
+      bottom: calc(100vh - 430px);
       width: 130px;
       height: 130px;
     }
 
     @include media-breakpoint-up(md) {
-      top: 50%;
-      bottom: auto;
-      margin-left: -80px;
-      margin-top: -35px;
+      left: calc((100vw / 2) - 220px);
+      bottom: 36%;
       width: 268px;
       height: 268px;
-      transform: translate(-50%, -50%);
     }
 
     video {
@@ -235,7 +246,7 @@ $pre-animation-delay: math.div($scroll-down-transition-duration, 2);
     padding-right: math.div($grid-gutter-width, 2);
     padding-top: 500px;
     max-width: map-get($container-max-widths, 'lg');
-    transition: all $scroll-down-transition-duration ease-out;
+    transition: padding-top $scroll-down-transition-duration * 1.5 ease;
 
     @include media-breakpoint-up(lg) {
       padding-top: $round-image-size-medium;
@@ -247,13 +258,13 @@ $pre-animation-delay: math.div($scroll-down-transition-duration, 2);
   }
 
   .title {
-    transition: all math.div($scroll-down-transition-duration, 2) ease-out;
+    transition: opacity math.div($scroll-down-transition-duration, 2) ease-out;
   }
 
   .pretitle,
   .subtitle {
     opacity: 0;
-    transition: all math.div($scroll-down-transition-duration, 2) ease-out;
+    transition: opacity math.div($scroll-down-transition-duration, 2) ease-out;
   }
 
   // ANIMATION ACTIVE
@@ -269,21 +280,22 @@ $pre-animation-delay: math.div($scroll-down-transition-duration, 2);
     }
 
     .header-inner-content__img {
-      width: 110vw;
-      height: 110vw;
-      top: calc(100% + 125px);
-      margin: 0;
-      transform: translate(-50%, -100%);
-      opacity: .5;
+      top: auto;
+      width:110vw;
+      height:110vw;
+      bottom: -100px;
       z-index: -1;
+      opacity: .5;
 
       @media (orientation: portrait) {
         width: 110vh;
         height: 110vh;
+        left: auto;
       }
 
       @include media-breakpoint-up(md) {
-        margin-left: 0;
+        margin-bottom: 0;
+        left: calc(-5vw - 12px - (15px / 2));
       }
     }
 
@@ -296,6 +308,7 @@ $pre-animation-delay: math.div($scroll-down-transition-duration, 2);
     }
 
     .title_expanded {
+      opacity: 1;
       display: block;
     }
 
