--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,3 +40,4 @@
 @import "components/_video";
 @import "components/_header";
 @import "components/_image-text-one-column";
+@import "components/_watermark";
