--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -58,5 +58,12 @@
     .title {
       margin: 20px auto;
     }
+
+    .byline {
+      margin-top: 20px;
+      text-transform: uppercase;
+      font-size: $font-size-xs;
+      letter-spacing: 0.15em;
+    }
   }
 }
