CAROUSEL - Disable conditional text on home page for improve viddeo performance

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -120,6 +120,17 @@
 
   .btn {
     margin-bottom: math.div($default-separation, 2);
+    &.after-expand{
+      display: none;
+      .is-scrolled &{
+        display: block;
+      }
+    }
+    &.before-expand{
+      .is-scrolled &{
+        display: none;
+      }
+    }
   }
 }
 
